--- a/views/about.html
+++ b/views/about.html
@@ -71,7 +71,7 @@ crossorigin="anonymous"> -->
               many badges. Check my google cloud profile :-
               <a
                 href="https://www.cloudskillsboost.google/public_profiles/a49faa6b-197d-4201-84ca-e71b5be5785b"
-              ></a>
+              >Google Cloud badges</a>
             </p>
             <p>
               A certified yoga instructor who received her training at the
