--- a/views/about.html
+++ b/views/about.html
@@ -48,6 +48,7 @@ crossorigin="anonymous"> -->
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/posts">Posts</a></li>
             <li><a href="/categories">Categories</a></li>
+            <li><ahref="/posts/add">AddPost</a></li>
           </ul>
         </div>
         <!-- /.navbar-collapse -->
