--- a/views/addPost.html
+++ b/views/addPost.html
@@ -57,7 +57,18 @@ crossorigin="anonymous"> -->
     </nav>
     <div class="container" style="padding-top: 60px">
       <div class="row">
-         <div class="col-md-12">
+ <div class="col-md-12">
+        
+          <h2>Add Post</h2>
+
+          <br />
+  
+          <form method="post" action="/posts/add" enctype="multipart/form-data">
+  
+              <fieldset>
+                  <legend>Feature Image</legend>
+                  <div class="row">
+                      <div class="col-md-12">
                           <div class="form-group">
                               <input class="form-control" id="featureImage" name="featureImage" type="file" />
                           </div>
@@ -107,6 +118,15 @@ crossorigin="anonymous"> -->
                             </div>
                           </div>
                       </div>
+                  </div>
+  
+              </fieldset>
+  
+              <hr />
+  
+              <input type="submit" class="btn btn-primary pull-right" value="Add Post" /><br /><br /><br />
+  
+          </form>
       </div>
     </div>
 
