--- a/views/addPost.html
+++ b/views/addPost.html
@@ -15,7 +15,7 @@ crossorigin="anonymous"> -->
 
     <link rel="stylesheet" href="/css/main.css" />
 
-    <title>WEB322 - Assignment Template</title>
+    <title>WEB322 - Rahi Kiransinh Raolji</title>
   </head>
   <body>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -48,7 +48,7 @@ crossorigin="anonymous"> -->
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/posts">Posts</a></li>
             <li><a href="/categories">Categories</a></li>
-            <li><a href="/posts/add">AddPost</a></li>
+            <li><a href="/posts/add">Add Post</a></li>
           </ul>
         </div>
         <!-- /.navbar-collapse -->
