--- a/views/about.html
+++ b/views/about.html
@@ -43,12 +43,12 @@ crossorigin="anonymous"> -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="/blog">Blog</a></li>
-            <li class="/about"><a href="#">About</a></li>
+            <li><a href="/views/about">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/posts">Posts</a></li>
             <li><a href="/categories">Categories</a></li>
-            <li><a href="/posts/add">AddPost</a></li>
+            <li><a href="/posts/add">Add Post</a></li>
           </ul>
         </div>
         <!-- /.navbar-collapse -->
