--- a/views/about.html
+++ b/views/about.html
@@ -15,7 +15,7 @@ crossorigin="anonymous"> -->
 
     <link rel="stylesheet" href="/css/main.css" />
 
-    <title>WEB322 - Assignment Template</title>
+    <title>Rahi Kiransinh Raolji's Blog</title>
   </head>
   <body>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -34,8 +34,8 @@ crossorigin="anonymous"> -->
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <span class="navbar-brand" href="#"
-            >WEB322 - Assignment Template</span
+          <span class="navbar-brand" href="/about"
+            >Rahi Kiransinh Raolji's Blog</span
           >
         </div>
 
@@ -43,7 +43,7 @@ crossorigin="anonymous"> -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="/blog">Blog</a></li>
-            <li><a href="/views/about">About</a></li>
+            <li><a href="/views/about.html">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/posts">Posts</a></li>
