--- a/views/about.html
+++ b/views/about.html
@@ -43,7 +43,7 @@ crossorigin="anonymous"> -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="/blog">Blog</a></li>
-            <li><a href="/views/about.html">About</a></li>
+            <li><a href="/about">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/posts">Posts</a></li>
