--- a/views/about.html
+++ b/views/about.html
@@ -34,7 +34,7 @@ crossorigin="anonymous"> -->
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <span class="navbar-brand" href="/about"
+          <span class="navbar-brand" a href="/about"
             >Rahi Kiransinh Raolji's Blog</span
           >
         </div>
